# plt-research

./: .gitattributes  .travis.yml  Cargo.toml  Lambda_Calculus__reduction_order.html  Makefile  NOTE__The_Little_Typer.html  README.md  Simply_typed_lambda_calculus_STLC_.html  appveyor.yml  docs.scrbl  index.html
GCs/: .gitignore  README.md  compaction.md
GCs/mark_sweep/: CMakeLists.txt  Makefile  README.md
GCs/mark_sweep/src/: main.cc  msobject.cc  msobject.hpp  msobject_test.cc
a-little-typer-note/: README.md  note.scrbl
agda/: .gitmessage  de-morgan.agda  equality.agda  hello-world.agda
agda-practice/: .gitignore  README.md
antaa/: CHANGELOG.md  README.md  antaa.cabal  package.yaml  test.tt
category/: comonad.rkt
chez/: hello.ss
continuations/: .gitmessage  cutting-out-continuation.rkt  info.rkt  lambda-calculus-transform.rkt
cps/: .gitignore  README.md
cubical/: .gitignore  README.md  arend.yaml  cubical.agda
de-bruijn-index/: .travis.yml  LICENSE  README.md  info.rkt  main.rkt
docs/: Makefile
foteus/: README.md  info.rkt
gocc/: .gitignore  README.md  go.mod  go.sum  main.go
hindley-milner/: .envrc  .gitignore  .gitmessage  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  build.sbt  example.rkt  hm-lang.cabal  info.rkt  lang.rkt  main.rkt  parser.rkt  pretty-print.rkt  semantic.bak  semantic.rkt  syntax.rkt  typ.rkt
how-to-implement-type-theory/: README.md  info.rkt  tt.rkt
lambda-pi/: .gitignore  .gitmessage  README.md  build.sbt  context.rkt  info.rkt  (+4 more)
pattern-coverage/: .ocamlformat  dune-project  pattern_coverage.opam
pattern-coverage/lib/: Algo.ml  dune
usualtt/: LICENSE  README.md  dune-project  test.tt
usualtt/lib/: Ast.ml  Core.ml  Lexer.mll  Parser.mly  Term.ml  dune
usualtt/test/: dune
(+318 files in other folders)
